# capstone-project-25t3-9900-h18f-cake

./: .gitignore  Backend_report.docx  README.md  docker-compose.yml  install-all-win-cpu.ps1  requirements-all-win-cpu.txt  requirements.txt  ~$ckend_report.docx
.github/workflows/: ci.yml
AI/: .gitignore  README.md  app.py  main.py  requirements.txt
AI/data/: marked_summary.json
AI/data/marked/: z5355249.docx  z5355249_Marking.docx
AI/data/marked/assignments/: z5355241.docx  z5355242.docx  z5355243.docx  z5355244.docx  z5355248.docx  z5355251.docx  z5355252.docx  z5355254.docx  z5355255.docx  z5355464.docx  z5355531.docx  z5355532.docx  z5367888.docx  z5370012.docx  z5383997.docx  z5383999.docx  z5864235.docx  z5864236.docx  z5864237.docx  z5864534.docx
AI/data/marked/mark/: z5355241_Marking.docx  z5355243_Marking.docx  z5355244_Marking.docx  z5355246_Marking.docx  z5355250_Marking.docx  z5355254_Marking.docx  z5355255_Marking.docx  z5355463_Marking.docx  z5355465_Marking.docx  z5355530_Marking.docx  z5355532_Marking.docx  z5367888_Marks.docx  z5383997_Marks.docx  z5383999_Marks.docx  z5864237_Marking.docx  z5864239_Marking.docx  z5864533_Marking.docx  z5864534_Marking.docx  ~$355240_Marking.docx
AI/data/test/: z5355240.docx  z5355245.docx  z5355246.docx  z5355247.docx  z5355250.docx  z5355253.docx  z5355530.docx  z5355623.docx  z5864233.docx  z5864238.docx  z5864239.docx  z5864533.docx
AI/data/test/mark/: z5355240_Marking.docx  z5355245_Marking.docx  z5355253_Marking.docx  z5864238_Marking.docx
AI/scripts/: config.py  predict_scores.py  rubric_assign_req.py  teacher_rubric_learning.py
AI/src/: __init__.py
AI/src/LLM/: LLM_Client.py
AI/src/preprocess/: Clean.py  Loader.py
AI/src/prompt/: rubric_generation.md  teacher_guided_scoring.md  teacher_rubric.md
AI/src/rubric_retriever/: rubric_teacher.py  teacher_summary_report.py
AI/src/scorer/: scorer.py
backend/: .dockerignore  .env  .gitignore  Dockerfile  README.md  dev.db  pyproject.toml  requirements.txt
backend/app/: collect_marking_result_in_csv.py  config.py  db.py  deps.py  logging.py  main.py  middleware.py  models.py  schemas.py  security.py  tutor_marking_extract.py
backend/app/marking_result_csv/2024_Term3/: comp9900.csv
backend/app/routers/: ai_router.py  assignments.py  auth.py  courses.py  extract_infomation.py  marking_result_manage.py  submission.py  submissions.py  system_logs.py
backend/app/services/: __init__.py  ai_bridge.py  ai_job_queue.py  ai_runner.py  marking_sync.py  system_log_service.py
backend/app/utils/: file_utils.py  files.py  jobq.py  path_utils.py  submission_status.py
backend/marking_result/2099_Term2/: comp7080.json
backend/tests/: test_marking_sync_utils.py  test_submission_status.py
backend/uploads/comp1234-2025-term-3/1-1/: meta.json
backend/uploads/comp1234-2025-term-3/1-10/: meta.json
backend/uploads/comp1234-2025-term-3/1-11/: meta.json
backend/uploads/comp1234-2025-term-3/1-2/: meta.json
backend/uploads/comp1234-2025-term-3/1-3/: meta.json
backend/uploads/comp1234-2025-term-3/1-4/: meta.json
backend/uploads/comp1234-2025-term-3/1-5/: meta.json
backend/uploads/comp1234-2025-term-3/1-6/: meta.json
backend/uploads/comp1234-2025-term-3/1-7/: meta.json
backend/uploads/comp1234-2025-term-3/1-8/: meta.json
backend/uploads/comp1234-2025-term-3/1-9/: meta.json
data/marked/assignments/: z5355463.docx
data/marked/mark/: z5355242_Marking.docx  z5355247_Marking.docx  z5355248_Marking.docx  z5355251_Marking.docx  z5355252_Marking.docx  z5355531_Marking.docx  z5355623_Marks.docx  z5370012_Marks.docx  z5864236_Marking.docx
data/raw/: a1_z12_tutor.docx
data/rubric/: rubric_kw_final.json
docs/: client demo recording.txt  lab demo1 recording link.txt  lab demo2 recording link.txt  lab final demo recording link.txt  user installation manual recording.txt
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: api.js  const.js  index.js  routes.jsx
frontend/src/common/: utils.js
frontend/src/component/: CourseActionDialog.test.jsx  CourseDialogs.test.jsx  DashboardStudent.test.jsx  course-action.jsx  course-add.jsx  course-card.jsx  course-delete.jsx  course-manage.jsx  dashboard-1-main.jsx  dashboard-2-tutor-scatter.jsx  dashboard-3-difference.jsx  dashboard-main.jsx  dashboard-tutor-scatter.jsx  exit-confirm.jsx  sidebar.jsx  upload-box.jsx  upload-stepper.jsx  view-MarkingDifferenceChart.jsx  view-sidedrawer.jsx  view-table.jsx  view-upperbar.jsx
frontend/src/context/: auth-context.jsx
frontend/src/pages/: admin-logs.jsx  airesult.jsx  course.jsx  dashboard.jsx  fileupload.jsx  login.jsx  register.jsx  viewpages.jsx
frontend/testing/: CourseActionDialog.test.jsx  CourseDialogs.test.jsx  DashboardStudent.test.jsx
scripts/: config.py  pipeline.py
src/: dnn_prior.py
src/component/: course-delete.jsx
src/pages/: fileupload.jsx
src/preprocess/: Chunker.py  Clean.py  Loader.py  Segment.py
src/rubric_retriever/: Embedder.py  Indexer.py  Retriever.py  keywords_gen.py
src/tests/: dnn_test.py
test_file/Step3/: z5355465_assignment.docx
test_file/Step4/: z5355464_mark.docx
test_file/Step5/: z5864234_assignment.docx
test_file/Step6/: z5370012_mark.docx  z5864233_mark.docx  z5864234_mark.docx  z5864235_mark.docx
