[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "jiahao li",email = "z5501964@ad.unsw.edu.au"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "isort (>=6.1.0,<7.0.0)",
    "alembic (==1.13.2)"
]
